--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.5",
+    "framer-motion": "^6.3.16",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
