--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@headlessui/react": "^1.7.17",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.290.0",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
