--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "lucide-react": "^0.554.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "4.0.0-beta.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -23,7 +25,6 @@
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "4.0.0-beta.9",
-    "@tailwindcss/postcss": "4.0.0-beta.9",
     "typescript": "^5"
   }
 }
