--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.7",
     "lucide-react": "^0.554.0",
     "next": "15.1.4",
     "react": "^19.0.0",
